--- a/index.html
+++ b/index.html
@@ -10,23 +10,6 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="d-flex">
-        <div class="land ">
-            <img class="ms-5 mt-5" src="images/bookdiverse/Frame 35181.png"  alt="">
-            <!-- <button class="rounded-5 ms-5 mt-5"><img src="images/svgexport-6.svg" alt=""></button> -->
-            <button class="search-bar shadow" type="submit" id="search-button"><i class="fas fa-search"></i> </button>
-            <div class="d-flex justify-content-center ">
-                <p class="">Bookstore</p>
-                <p>Apply to sell</p>
-                <p>Help</p>
-                <button>Login</button>
-                <button class="bg-warning">Signup</button>
-            </div>
-            <h1 class="text-center">Bookdiverse: A Book Lovers Paradise <br> Discover millions of books from independent</h1>
-            <h1 class="text-center"> bookstores and our curated collection.</h1>
-        </div>
-
-        
-    </div>
+    <div class="background"></div>
 </body>
 </html>
