--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <div class="background"></div>
+<body class="">
+    <div class="background">
+        <nav class="d-flex p-5 fs-2">
+            <img src="images/Frame 35181.png" width="200" alt="">
+            <img src="images/search (1).svg" width="60" alt="" class="search ms-5">
+            <div class="d-flex justify-content-center ps-5 ms-5">
+                <a href="" class="text-decoration-none text-light ms-5">Book stores</a>
+                <a href="" class="text-decoration-none text-light ms-5">Apply to sell</a>
+                <a href="" class="text-decoration-none text-light ms-5">Help</a>
+            </div>
+            <div>
+                <button class="btn border-3 border-danger text-white rounded-3 fs-3 ms-5 px-3">Login</button>
+                <button class="btn btn-danger rounded-3 fs-3 ms-5 px-3">Sign up</button>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
