--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -15,7 +15,7 @@
     <div class="">
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-        <img class="ms-5 mt-5" src="images/download (4).png" alt="">
+        <img class="ms-5 mt-5" src="images/rachel khong.jpg" alt="">
         <button class="search-bar shadow" type="submit" id="search-button"><i class="fas fa-search"></i> </button>
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
