--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="d-flex justify-content-center">
+<body>
+    <div class="d-flex justify-content-center">
     <div class="box mt-5 col-lg-3 col-8">
         <h2 class="mt-4 fs-1">Forgot Password</h2> 
         <p class="fs-4 mt-3">A six-digit pin will be sent to your email</p>
@@ -21,5 +22,6 @@
             <div class="color2"></div>
         </div> -->
     </div>
+</div>
 </body>
 </html> 
