--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -23,5 +23,34 @@
         </div> -->
     </div>
 </div>
+
+<div class="back2">
+    <img class="image" src="image/Frame 35181.png" width="200px" alt="">
+    <div class="back3">
+        <button class="login">login</button>
+        <div class="display">
+            <ul class="li">
+                <li>Library</li>
+                <li>Genres</li>
+                <li>Languages</li>
+                <li>Authors</li>
+            </ul>
+
+            <ul class="ul">
+                <li>Company</li>
+                <li>About Us</li>
+                <li>Help</li>
+                <li>Become a Partner</li>
+            </ul>
+        </div>
+        <hr class="hr">
+
+        <div>
+            <p>contact us:
+                <img src="" alt="">
+            </p>
+        </div>
+    </div>
+</div>
 </body>
 </html> 
