--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -67,8 +67,7 @@
     <button class="opacity-25 ms-5 rounded-4 px-5 py-3 text-dark fw-bold border-2 border-dark">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ebook&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
     <button class="opacity-25 ms-5 rounded-4 px-5 py-3 text-dark fw-bold border-2 border-dark">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pdf &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button>
     </div>
-    <button class="btn btn-white border border-danger rounded-4 shadow mt-4"><h1>Continue Shopping</h1></button>
-    <h1>Related books</h1>
+    <button class="btn btn-white border border-danger rounded-4 shadow mt-4 text-center"><h1>Continue Shopping</h1></button>
     
 </body>
 </html>
