footer almost done

--- a/login.html
+++ b/login.html
@@ -22,5 +22,33 @@
         <a href="" class="text-decoration-none fs-3 text-dark" style=" border-bottom: 2px black dotted;">Forgot Password?</a> <br>
         <p class="fs-3 mt-2">Don't have an account?<a href="" class="text-decoration-none">Sign up</a></p>
     </div>
+
+    <div class="back2">
+        <img class="image" src="images/Frame 35181.png" width="200px" alt="">
+        <div class="back3">
+            <button class="login">login</button>
+            <div class="display">
+                <ul class="li">
+                    <li>Library</li>
+                    <li>Genres</li>
+                    <li>Languages</li>
+                    <li>Authors</li>
+                </ul>
+    
+                <ul class="ul">
+                    <li>Company</li>
+                    <li>About Us</li>
+                    <li>Help</li>
+                    <li>Become a Partner</li>
+                </ul>
+            </div>
+    
+            <div class="border-top border-white border-3 pt-3 text-light fs-3 d-flex justify-content-center gap-5">
+                <p>Contact us: </p>
+                <p>Terms and privacy</p>
+                <p>Delivery & Runs</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
