--- a/bookstoresignup.html
+++ b/bookstoresignup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookstore signup</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -28,6 +29,34 @@
         <button class="btn form-control w-50 p-2 rounded-4 mt-5 text-white fs-3 shadow" style="background-color: rgb(243, 104, 127);">Sign Up</button>
         <p class="fw-bold">By signing up you agree with our terms</p>
         <p class="fs-3 mt-2">Already have an account?<a href="" class="text-decoration-none">Log in</a></p> <br>
+    </div>
+
+    <div class="back2">
+        <img class="image" src="images/Frame 35181.png" width="200px" alt="">
+        <div class="back3">
+            <button class="login">login</button>
+            <div class="display">
+                <ul class="li">
+                    <li>Library</li>
+                    <li>Genres</li>
+                    <li>Languages</li>
+                    <li>Authors</li>
+                </ul>
+    
+                <ul class="ul">
+                    <li>Company</li>
+                    <li>About Us</li>
+                    <li>Help</li>
+                    <li>Become a Partner</li>
+                </ul>
+            </div>
+    
+            <div class="border-top border-white border-3 pt-3 text-light fs-3 d-flex justify-content-center gap-5">
+                <p>Contact us: </p>
+                <p>Terms and privacy</p>
+                <p>Delivery & Runs</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
