--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="back2">
-    <img class="image" src="image/Frame 35181.png" width="200px" alt="">
+    <img class="image" src="images/Frame 35181.png" width="200px" alt="">
     <div class="back3">
         <button class="login">login</button>
         <div class="display">
@@ -43,12 +43,11 @@
                 <li>Become a Partner</li>
             </ul>
         </div>
-        <hr class="hr">
 
-        <div>
-            <p>contact us:
-                <img src="" alt="">
-            </p>
+        <div class="border-top border-white border-3 pt-3 text-light fs-3 d-flex justify-content-center gap-5">
+            <p>Contact us: </p>
+            <p>Terms and privacy</p>
+            <p>Delivery & Runs</p>
         </div>
     </div>
 </div>
