--- a/verification.html
+++ b/verification.html
@@ -16,5 +16,33 @@
         <button class="btn w-50 form-control-lg pt-2 pb-2 ps-5 pe-5 rounded-4 fs-3 text-white shadow align-self-center ms-5" style="background-color:  rgb(243, 104, 127);">Submit</button> 
         <p class="fs-4 text-center mt-3">Don't have an account? <a href="" class="text-decoration-none">Sign Up</a></p>
     </div>
+
+    <div class="back2">
+        <img class="image" src="images/Frame 35181.png" width="200px" alt="">
+        <div class="back3">
+            <button class="login">login</button>
+            <div class="display">
+                <ul class="li">
+                    <li>Library</li>
+                    <li>Genres</li>
+                    <li>Languages</li>
+                    <li>Authors</li>
+                </ul>
+    
+                <ul class="ul">
+                    <li>Company</li>
+                    <li>About Us</li>
+                    <li>Help</li>
+                    <li>Become a Partner</li>
+                </ul>
+            </div>
+    
+            <div class="border-top border-white border-3 pt-3 text-light fs-3 d-flex justify-content-center gap-5">
+                <p>Contact us: </p>
+                <p>Terms and privacy</p>
+                <p>Delivery & Runs</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
