--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -67,7 +67,20 @@
     <button class="opacity-25 ms-5 rounded-4 px-5 py-3 text-dark fw-bold border-2 border-dark">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ebook&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
     <button class="opacity-25 ms-5 rounded-4 px-5 py-3 text-dark fw-bold border-2 border-dark">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pdf &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button>
     </div>
+    <div class="d-flex justify-content-center">
     <button class="btn btn-white border border-danger rounded-4 shadow mt-4 text-center"><h1>Continue Shopping</h1></button>
+    </div><br><br><br>
+    <div>
+        <h2 class="text-center">Related books</h2><br>
+        <div class="grid-imaging">
+        <div class="grid-image"><img src="Bookdiverse images/coast.jpg" width="200" alt=""></div>
+        <div class="grid-image"><img src="Bookdiverse images/goodbye.jpg " width="200" alt=""></div>
+        <div class="grid-image"><img src="Bookdiverse images/ministry.jpg" width="200" alt=""></div>
+        <div class="grid-image"><img src="Bookdiverse images/skandar.jpg" width="200" alt=""></div>
+        <div class="grid-image"><img src="Bookdiverse images/akoi's house.jpg" width="200" alt=""></div>
+
+        </div>
+    </div>
     
 </body>
 </html>
