--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="">
-        <div class="image d-flex text-light">
+        <div class="photo d-flex text-light">
             <img class="ms-5 mt-5" src="images/bookdiverse/Frame 35181.png" width="120" height="50" alt="">
             <!-- <button class="  "><img src="images/svgexport-6.svg"  width="50" height="1"alt=""></button> -->
             <div class="books">
