--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -73,11 +73,12 @@
     <div>
         <h2 class="text-center">Related books</h2><br>
         <div class="grid-imaging">
-        <div class="grid-image"><img src="Bookdiverse images/coast.jpg" width="200" alt=""></div>
-        <div class="grid-image"><img src="Bookdiverse images/goodbye.jpg " width="200" alt=""></div>
-        <div class="grid-image"><img src="Bookdiverse images/ministry.jpg" width="200" alt=""></div>
-        <div class="grid-image"><img src="Bookdiverse images/skandar.jpg" width="200" alt=""></div>
-        <div class="grid-image"><img src="Bookdiverse images/akoi's house.jpg" width="200" alt=""></div>
+        <div class="grid-image shadow"><img src="Bookdiverse images/coast.jpg" width="200" alt=""> 
+        <p class="fs-2">The coast road</p></div>
+        <div class="grid-image shadow"><img src="Bookdiverse images/goodbye.jpg " width="200" alt=""></div>
+        <div class="grid- shadow"><img src="Bookdiverse images/ministry.jpg" width="200" alt=""></div>
+        <div class="grid-image shadow"><img src="Bookdiverse images/skandar.jpg" width="200" alt=""></div>
+        <div class="grid-image shadow"><img src="Bookdiverse images/akoi's house.jpg" width="200" alt=""></div>
 
         </div>
     </div>
