--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -14,10 +14,10 @@
 
 <body>
     <div class="">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img class="ms-5 mt-5" src="images/download (4).png" alt="">
-                <button class="search-bar shadow" type="submit" id="search-button"><i class="fas fa-search"></i>
+                <img class="ms-5 mt-1" src="images/download (4).png" alt="">
+                <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
                 </button>
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
