--- a/cartpage.html
+++ b/cartpage.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img class="ms-5 mt-5" src="images/download (4).png" alt="">
-                <button class="search-bar shadow" type="submit" id="search-button"><i class="fas fa-search"></i>
+                <img class="ms-5 mt-1" src="images/download (4).png" alt="">
+                <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
                 </button>
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -34,31 +34,22 @@
         </nav><br><br>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <h1 class="nav-link active fs-1 text-dark" aria-current="page" href="#">Shopping Cart ></h1>
+                <a href="" class="text-decoration-none text-dark fs-1">Shopping Cart ></a>
             </li>
             <li class="nav-item">
-                <h1 class="nav-link disabled fs-1 opacity-50" href="#">Checkout Details > </h1>
+                <a href="" class="text-decoration-none text-dark fs-1 opacity-50">Checkout Details > </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled fs-2 opacity-25"   >Order Complete</a>
+                <a href="" class="text-decoration-none text-dark fs-1 opacity-25">   Order Complete</a>
             </li>
-        </ul>
-            <!-- <div class="justify-content-center d-flex">
-            <h1>Shopping Cart ></h1>
-            <h1 class="disabled" aria-disabled="true">Checkout Details </h1>
-            <h1></h1>
-            
-            </div> -->
+        </ul> <br> <br> <br>
             <div class="grid-contain">
-                
-                    <div class="grid-i d-flex"><img src="/Bookdiverse images/rachel khong.jpg" width="150" alt="">
-                    <!-- <p  href="" >(Hardcover)</p> -->
+                    <div class="grid-i d-flex p-2"><img src="/Bookdiverse images/rachel khong.jpg" width="150" alt="">
                     <div class="cover">
                         <div class="d-flex">
                             <h1 class="">Real Americans</h1>
                             <h5 class="fs-6 mt-4 f">(Hardcover)</h5>
                         </div>
-                        <!-- <h1 class="">Real Americans (Hardcover)</h1> -->
                         <h2 class="">By Rachel khong</h2>
                         <h4>Genre: Fiction</h4>
                         <div class="dropdown" data-bs-theme="light">
@@ -66,14 +57,14 @@
                                 Qty:1
                             </button>
                             <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            <li><a class="dropdown-item active" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Separated link</a></li>
                             </ul> -->
-                          </div>
+                        </div>
                     </div>
             </div>
     </div>
