change image added

--- a/cartpage.html
+++ b/cartpage.html
@@ -44,7 +44,7 @@
             </li>
         </ul> <br> <br> <br>
             <div class="grid-contain">
-                    <div class="grid-i d-flex p-2"><img src="/Bookdiverse images/rachel khong.jpg" width="150" alt="">
+                    <div class="grid-i d-flex p-2"><img src="images/bookdiverse/rachel khong.jpg" width="150" alt="">
                     <div class="cover">
                         <div class="d-flex">
                             <h1 class="">Real Americans</h1>
@@ -56,17 +56,27 @@
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
                                 Qty:1
                             </button>
-                            <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
-                            <li><a class="dropdown-item active" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Separated link</a></li>
-                            </ul> -->
+                            
                         </div>
                     </div>
-            </div>
+            </div><br><br>
+            <div class="grid-contain">
+                <div class="grid-i d-flex p-2"><img src="images/bookdiverse/rachel khong.jpg" width="150" alt="">
+                <div class="cover">
+                    <div class="d-flex">
+                        <h1 class="">Real Americans</h1>
+                        <h5 class="fs-6 mt-4 f">(Hardcover)</h5>
+                    </div>
+                    <h2 class="">By Rachel khong</h2>
+                    <h4>Genre: Fiction</h4>
+                    <div class="dropdown" data-bs-theme="light">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
+                            Qty:1
+                        </button>
+                        
+                    </div>
+                </div>
+        </div>
     </div>
 </body>
 </html>
