--- a/cartpage.html
+++ b/cartpage.html
@@ -19,16 +19,12 @@
                 <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
                 </button>
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link active" aria-current="page"
-                        href="#">Bookstores</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link active" aria-current="page" href="#">Help</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link active" aria-current="page" href="#"> <img src="images/download (5).png"
-                            alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link active" aria-current="page" href="#"><img src="images/download (6).png"
-                            alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link active" aria-current="page" href="#"><img src="images/download (7).png"
-                            alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" style="margin-left: 900px;" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#">Bookstores</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#">Help</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a  class=" nav-link active" aria-current="page" href="#"> <img src="images/download (5).png.svg"  alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#"><img src="images/cart3.svg" alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#"><img src="images/person.svg" alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </div>
             </div>
         </nav><br><br>
