--- a/homepage.html
+++ b/homepage.html
@@ -9,17 +9,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="">
-        <div class="photo d-flex text-light">
-            <img class="ms-5 mt-5" src="images/bookdiverse/Frame 35181.png" width="120" height="50" alt="">
-            <!-- <button class="  "><img src="images/svgexport-6.svg"  width="50" height="1"alt=""></button> -->
-            <div class="books">
-            <p class="g-3">Bookstores</p>        
-            <p class="g-5">Help</p>
-            </div>
-            <h2 class="">Shop At Your Convenience - Anytime,Anywhere</h2>
+        <div class="photo text-light ">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <img class="ms-5 mt-3" src="images/Frame 35181.png" width="150" alt="">
+                    <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
+                    </button>
+                    <div class="navbar-nav">
+                        <a class="nav-link active text-light" style="margin-left: 900px;" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="nav-link active text-light" aria-current="page" href="#">Bookstores</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="nav-link active text-light" aria-current="page" href="#">Help</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a  class=" nav-link active text-dark" aria-current="page" href="#"> <img src="images/download (5).png.svg"  alt="" style="filter: invert(1);"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="nav-link active" aria-current="page" href="#"><img src="images/cart3.svg" alt="" style="filter: invert(1);"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="nav-link active" aria-current="page" href="#"><img src="images/person.svg" alt="" style="filter: invert(1);"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </div>
+                    <!-- <h1>Shop At Your Convenience - Anytime, Anywhere</h1> -->
+                </div>
+                <!-- <h1>Shop At Your Convenience - Anytime, Anywhere</h1> -->
+            </nav><br><br>
+            <h1 class="text-center" style="margin-top: 330px;">Shop At Your Convenience - Anytime, Anywhere</h1>
         </div>
 
     <!-- </div> -->
