--- a/Bookdescription.page.html
+++ b/Bookdescription.page.html
@@ -20,6 +20,14 @@
                 <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
                 </button>
                 <div class="navbar-nav">
+                    <a class="nav-link active" style="margin-left: 900px;" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#">Bookstores</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#">Help</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a  class=" nav-link active" aria-current="page" href="#"> <img src="images/download (5).png.svg"  alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#"><img src="images/cart3.svg" alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link active" aria-current="page" href="#"><img src="images/person.svg" alt="" ></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </div>
+                <!-- <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a class="nav-link active" aria-current="page"
                         href="#">Bookstores</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -30,12 +38,12 @@
                             alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a class="nav-link active" aria-current="page" href="#"><img src="images/download (7).png"
                             alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </div>
+                </div> -->
             </div>
         </nav>
     </div>
     <div class="d-flex">
-        <img class="real" src="/Bookdiverse images/rachel khong.jpg" alt="">
+        <img class="real" src="images/bookdiverse/rachel khong.jpg" alt="">
         <!-- <p  href="" >(Hardcover)</p> -->
         <div class="cover">
             <div class="d-flex">
@@ -87,17 +95,17 @@
     <div>
         <h2 class="text-center">Related books</h2><br>
         <div class="grid-imaging">
-            <div class="grid-item text-center"><img src="Bookdiverse images/coast.jpg" width="200" alt=""><p class="fs-2">The Coast Road</p></div>
-            <div class="grid-item text-center"><img src="Bookdiverse images/goodbye.jpg" width="210" alt="">  <p class="fs-2">Goodbye Vitamin</p></div>
-            <div class="grid-item text-center"><img src="Bookdiverse images/ministry.jpg" width="213" alt=""> <p class="fs-2">Ministry Of time</p></div>
-            <div class="grid-item text-center"><img src="Bookdiverse images/skandar.jpg" width="211" alt="">  <p class="fs-2">Skandar And The <br> Choas Trials</p></div>
-            <div class="grid-item text-center"><img src="Bookdiverse images/akoi's house.jpg" width="200" alt="">  <p class="fs-2">Akois House</p></div></div>
+            <div class="grid-item text-center"><img src="images/bookdiverse/coast 1.png" width="210" alt=""><p class="fs-2">The Coast Road</p></div>
+            <div class="grid-item text-center"><img src="images/bookdiverse/goodbye.jpg" width="210" alt="">  <p class="fs-2">Goodbye Vitamin</p></div>
+            <div class="grid-item text-center"><img src="images/bookdiverse/ministry.jpg" width="213" alt=""> <p class="fs-2">Ministry Of time</p></div>
+            <div class="grid-item text-center"><img src="images/bookdiverse/skandar.jpg" width="211" alt="">  <p class="fs-2">Skandar And The <br> Choas Trials</p></div>
+            <div class="grid-item text-center"><img src="images/bookdiverse/akoi's house.jpg" width="200" alt="">  <p class="fs-2">Akois House</p></div></div>
         </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 
 
     <div class="back2">
-        <img class="image" src="images/Frame 35181.png" width="200px" alt="">
+        <img class="image " src="images/Frame 35181.png" width="200px" alt="">
         <div class="back3">
             <button class="login">login</button>
             <div class="display">
