--- a/checkoutpage1.html
+++ b/checkoutpage1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Checkout Page 1</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <img class="ms-5 mt-1" src="images/download (4).png" alt="">
-                <!-- <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
-                </button> -->
-                <img src="images/search (1).svg" alt="" class="search-bar shadow mt-3" id="search-button"><i class="fas fa-search"></i>>
+                <button class="search-bar shadow mt-3 " type="submit" id="search-button"><i class="fas fa-search"></i>
+                </button>
+                <!-- <img src="images/search (1).svg" alt="" class="search-bar shadow mt-3" id="search-button"><i class="fas fa-search"></i>> -->
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a class="nav-link active" aria-current="page"
