--- a/cartpage.html
+++ b/cartpage.html
@@ -57,13 +57,13 @@
                     </div>
             </div><br><br>
             <div class="grid-contain">
-                <div class="grid-i d-flex p-2"><img src="images/bookdiverse/rachel khong.jpg" width="150" alt="">
+                <div class="grid-i d-flex p-2"><img src="images/bookdiverse/atomic habits.jpg" width="150" alt="">
                 <div class="cover">
                     <div class="d-flex">
-                        <h1 class="">Real Americans</h1>
-                        <h5 class="fs-6 mt-4 f">(Hardcover)</h5>
+                        <h1 class="">Atomic habits</h1>
+                        <h5 class="fs-6 mt-4 f">(Paperback)</h5>
                     </div>
-                    <h2 class="">By Rachel khong</h2>
+                    <h2 class="">By James Clear</h2>
                     <h4>Genre: Fiction</h4>
                     <div class="dropdown" data-bs-theme="light">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
