--- a/cartpage.html
+++ b/cartpage.html
@@ -52,7 +52,7 @@
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
                                 Qty:1
                             </button>
-                            
+                            <a class="text-danger text-decoration-none ms-5" href="">Delete</a>
                         </div>
                     </div>
             </div><br><br>
@@ -69,7 +69,7 @@
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
                             Qty:1
                         </button>
-                        
+                        <a class="text-danger text-decoration-none ms-5" href="">Delete</a>
                     </div>
                 </div>
         </div>
